tests/neg/i7986.check
-- Error: tests/neg/i7986.scala:3:56 -----------------------------------------------------------------------------------
3 |extension (project: Project) def dependencies = project.name.dependencies // error, following a cyclic reference warning
  |                                                ^^^^^^^^^^^^
  |                              An extension method for `.dependencies` was tried but could not be fully constructed
  |                              since there was a cyclic reference involving method dependencies
